packages/forge-dsl/fixtures/errors/e18-bad-number.fable
// expect: FORGE004
VAR x = 12abc

-> go
=== go ===
{x}
-> END
